--- a/src/app/components/weather/WeatherList/WeatherList.css
+++ b/src/app/components/weather/WeatherList/WeatherList.css
@@ -21,7 +21,7 @@ html * /* override x.xhtml.ru style */
 
 *::-webkit-scrollbar,
 html *::-webkit-scrollbar {
-  height: 12px;
+  /* height: 12px; */
   width: 12px;
 }
 *::-webkit-scrollbar-track,
@@ -30,9 +30,9 @@ html *::-webkit-scrollbar-track {
 }
 *::-webkit-scrollbar-thumb,
 html *::-webkit-scrollbar-thumb {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   border-radius: 5px;
-  border: 1px solid rgb(255, 255, 255);
+  /* border: 3px solid orange; */
 }
 
 
